--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-data": "^4.17",
-        "spatie/laravel-permission": "^6.21"
+        "spatie/laravel-permission": "^6.21",
+        "tucker-eric/eloquentfilter": "^3.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
